--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --auth-pattern: url("/images/background/bg-auth.jpg");
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-rubik: var(--font-rubik);
@@ -117,5 +118,11 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .bg-auth-pattern {
+    background-image: var(--auth-pattern);
   }
 }
