--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,4 +125,39 @@
   .bg-auth-pattern {
     background-image: var(--auth-pattern);
   }
+
+  .fc-toolbar-title {
+    font-weight: 700;
+  }
+
+  .fc .fc-button-active {
+    background-color: var(--primary) !important;
+    color: var(--primary-foreground) !important;
+  }
+
+  .fc .fc-button-primary {
+    background-color: var(--primary) !important;
+    color: var(--primary-foreground) !important;
+    border: none !important;
+  }
+
+  .fc .fc-button:hover {
+    background-color: var(--primary) !important;
+    filter: brightness(0.9);
+    border: none !important;
+  }
+
+  .fc .fc-button-primary {
+    background-color: var(--primary) !important;
+    color: var(--primary-foreground) !important;
+    border: none !important;
+  }
+
+  .fc-event-time {
+    display: none !important;
+  }
+
+  .fc-event-title {
+    font-weight: 400 !important;
+  }
 }
